--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "colorette": "^2.0.20",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "winston": "^3.19.0"
